apps/codeserver/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: codeserver
  labels:
    goldilocks.fairwinds.com/enabled: "true"
