apps/codeserver/k8s.np.codeserver-default-deny.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: codeserver-default-deny
  namespace: codeserver
spec:
  endpointSelector: {}  # Empty selector = matches ALL pods in this namespace
  # Default deny all ingress and egress
  ingress:
    - {}
  egress:
    - {}
